# chessxx

./: .atom-build.yml
example/: main.cc  makefile
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  ChessPiece.h  ChessTeams.h  ChessVariants.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Pieces.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Screen.h  StandardVariant.cpp  StandardVariant.h  StrUtil.h  Variant.h  chessxx.h
